# flask-pagedlist

./: .gitignore  README.rst  example-requirements.txt  requirements.txt  run_example.py  setup.cfg  setup.py
example/: __init__.py
example/templates/: _layout.html
example/templates/home/: index.html
example/templates/unobtrusive/: _partial.html
flask_pagedlist/: __init__.py  builder.py
flask_pagedlist/static/js/: winf.unobtrusive-ajax.min.js
