[metadata]
name = Flask-PagedList
author = Timon Wong
author-email = timon86.wang@gmail.com
summary = Add pypagedlist support for Flask
description-file =
    README.rst
license = Public Domain
home-page = https://github.com/timonwong/flask-pagedlist
classifier =
    Environment :: Web Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: Public Domain
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    flask_pagedlist

[wheel]
universal = 1
